' Generated by UML Generator
' Encoded: hLRBRjim4BphAtYKKodeMIYC57MA1aY206u_O4rjx4KbqY2feEZZtqkA4X-MxLCkXZGaPsVsGVbE6r1cwBj2_oHn10Kzunre_TaOHRl1u0ENOak_aNqi3jGYuwHuXqK1EsqKSEEtinTKMWfWVmh6wbPGmxQMGEpTgv3zJc6Al28_m3DmwWc5aGtRWC7nfEo9KqSE8eMSanGEh-tFXob6cT1NB2Uls5dgYfqZNZdIFPhx5jforJ0IflXN5DxG3q5lDXxPDMzgwQ95cp03lOkZ6_P8sdpQ9DWwA4_8ofndr01xXNjGwTcojKAJTollJL8RzGKNNXs7hil4YQ579Rqfjqw33Pvk68K5bZ8Zi6cDnokM7rv54Ly6Mv59W6nfBw-NdGz7-GI_g8-w3bA1ef2-R_vrp1m9pHKTdJgSrv_0al6XWvZRKKEPXr-snKdeYXsLV4KjLSDUfgUq59EEyj2mwN4kWDtZXUr8QInjY7jjXfP06BHxWi2aKaaPBxKIToPcawEZQ31hYylTC-MXyKLPz4jKwJKeFAAXrYLW9sM7CCvPFyk_al38z6wJMB6bdDLfgXDhPx8S86zl31xl5I4DV2K1NMFZ3xiEGz8dKlUEmLXQrE0xH2WJSjTPaQLYvpb6BtR2t6drF6jnTywa9jYOkcswHmcss8E0j5NSn3m8cq8Rz55Qqk_KuxnWUK_GKVhSpWl2Yfsbyt1EbepzF35UfOREaIyogpV43RINsdecUSScEb7YfqFJNboPZld3TLFNoISdlVsbMqbciF2tdeEdl2P8x4oFtTwkqrwAu6o_oAu7H-7xCPdNklwxdZ-mAPx7InOS_uB5WT5W79UR43B74jMXtfcIW4RH0Sg3tQ5exN-C_m
' URL: http://www.plantuml.com/plantuml/uml/hLRBRjim4BphAtYKKodeMIYC57MA1aY206u_O4rjx4KbqY2feEZZtqkA4X-MxLCkXZGaPsVsGVbE6r1cwBj2_oHn10Kzunre_TaOHRl1u0ENOak_aNqi3jGYuwHuXqK1EsqKSEEtinTKMWfWVmh6wbPGmxQMGEpTgv3zJc6Al28_m3DmwWc5aGtRWC7nfEo9KqSE8eMSanGEh-tFXob6cT1NB2Uls5dgYfqZNZdIFPhx5jforJ0IflXN5DxG3q5lDXxPDMzgwQ95cp03lOkZ6_P8sdpQ9DWwA4_8ofndr01xXNjGwTcojKAJTollJL8RzGKNNXs7hil4YQ579Rqfjqw33Pvk68K5bZ8Zi6cDnokM7rv54Ly6Mv59W6nfBw-NdGz7-GI_g8-w3bA1ef2-R_vrp1m9pHKTdJgSrv_0al6XWvZRKKEPXr-snKdeYXsLV4KjLSDUfgUq59EEyj2mwN4kWDtZXUr8QInjY7jjXfP06BHxWi2aKaaPBxKIToPcawEZQ31hYylTC-MXyKLPz4jKwJKeFAAXrYLW9sM7CCvPFyk_al38z6wJMB6bdDLfgXDhPx8S86zl31xl5I4DV2K1NMFZ3xiEGz8dKlUEmLXQrE0xH2WJSjTPaQLYvpb6BtR2t6drF6jnTywa9jYOkcswHmcss8E0j5NSn3m8cq8Rz55Qqk_KuxnWUK_GKVhSpWl2Yfsbyt1EbepzF35UfOREaIyogpV43RINsdecUSScEb7YfqFJNboPZld3TLFNoISdlVsbMqbciF2tdeEdl2P8x4oFtTwkqrwAu6o_oAu7H-7xCPdNklwxdZ-mAPx7InOS_uB5WT5W79UR43B74jMXtfcIW4RH0Sg3tQ5exN-C_m
' Generated on: 2025-11-24T17:47:20.959339406

@startuml Practica6
skinparam classAttributeIconSize 0
hide circle

abstract class Persona {
  -dni: String
  -nombre: String
  -fechaNacimiento: Date
  -domicilio: Direccion
  --
  +Persona(dni: String, nombre: String, fechaNacimiento: Date, domicilio: Direccion)
  +getEdad(): int
}

class Universidad {
  -nombre: String
  -departamentos: List<Departamento>
  --
  +Universidad(nombre: String)
  +agregarDepartamento(d: Departamento): void
}

class Direccion {
  -calle: String
  -numero: int
  -ciudad: String
  --
  +Direccion(calle: String, numero: int, ciudad: String)
}

class Curso {
  -codigo: String
  -nombre: String
  -cupoMaximo: int
  -horarios: List<Horario>
  -inscripciones: List<Matricula>
  --
  +Curso(codigo: String, nombre: String, cupoMaximo: int, profesor: Profesor)
  +agregarHorario(h: Horario): void
  +inscribirse(e: Estudiante): Matricula
}

class Departamento {
  -nombre: String
  -cursos: List<Curso>
  --
  +Departamento(nombre: String)
  +agregarCurso(c: Curso): void
}

class Estudiante {
  -repetidor: boolean
  -matriculas: List<Matricula>
  --
  +Estudiante(dni: String, nombre: String, fechaNacimiento: Date, domicilio: Direccion, repetidor: boolean)
  +inscribirse(c: Curso): Matricula
}

class Matricula {
  -fecha: Date
  -notaFinal: double
  -curso: Curso
  -estudiante: Estudiante
  --
  +Matricula(fecha: Date, curso: Curso, estudiante: Estudiante)
  +calcularNotaFinal(): double
}

class Horario {
  -diaSemana: String
  -horaInicio: LocalTime
  -horaFin: LocalTime
  --
  +Horario(diaSemana: String, horaInicio: LocalTime, horaFin: LocalTime)
}

class Profesor {
  -salario: double
  -cursosDictados: List<Curso>
  --
  +Profesor(dni: String, nombre: String, fechaNacimiento: Date, domicilio: Direccion, salario: double)
  +asignarCurso(c: Curso): void
}

Persona *-- Direccion
Universidad o-- Departamento
Curso o-- Horario
Curso o-- Matricula
Curso ..> Estudiante
Curso ..> Profesor
Departamento o-- Curso
Estudiante --|> Persona
Estudiante o-- Matricula
Estudiante ..> Curso
Estudiante ..> Direccion
Matricula *-- Curso
Matricula *-- Estudiante
Profesor --|> Persona
Profesor o-- Curso
Profesor ..> Direccion
@enduml